--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -79,7 +79,7 @@ _tickrate=full
 # using trusted VMs - I'm not overly worried about this vulnerability.
 #
 # !!! WARNING: Do NOT enable this: may have your system !!!
-_vmx_hack=
+_vmx_hack=n
 
 # Disable RT Throttling (!!! DANGER ZONE !!!)
 # Don't enable unless you know what you are doing.
@@ -108,7 +108,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-6.10-rc3
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=8
+pkgrel=9
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -116,7 +116,7 @@ options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
   "https://git.kernel.org/torvalds/t/linux-6.10-rc3.tar.gz"
-  "0000-patch-6.10-rc2-rt3.patch"
+  "0000-patch-6.10-rc3-rt5.patch"
   "config"
   "config_surface7"
   "auto-cpu-optimization.sh"
@@ -509,7 +509,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha256sums=('cf967cf62073f58a23482dd1a579443e3a978570add40231aa52bb0cbf659e48'
-            '68a1247a05087cd801fc01f24bc97b044f5a25d3c9014dc495e62f7e2e9ab8a1'
+            '7afbe57d2e46bf9305484772c6e418256bb9d3f4d0a31ac2bcfa3122d7a64914'
             '15517a8f9a761515d7507aae0cd089a49d4bfc64946de5305205cf07cf2791f5'
             '5d39331ebde909922ddc98307b7b4e7c1728708dd5ad424f2e2e77f34eec4c54'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
@@ -544,7 +544,7 @@ sha256sums=('cf967cf62073f58a23482dd1a579443e3a978570add40231aa52bb0cbf659e48'
             'f3e6c8c98ea5172f424971bc20f128c7f1f6416af6944f58dad1048ba4dff168'
             'a07a110ec5bf4ebcfa1fa04e446ca00145caf72cc3d28d3f5937361f1b4e2e11'
             'c6c2b07ba61d624a3e2b351dc5d3d914183bdecb61fa975486f64b046f88a55e'
-            '15f2e5b9c8ff3539dfb250abcf1d381aa379be9ac3f1c3db5b89061cbe193b8f'
+            '6d5a98e630c2981fbab73b895dab34fd727b4113b3c5a6c3a6c00b8ef93a3ae1'
             '95b8d13755145350a4566aaa0c81b1d2f73d670ca977a2631ebe055b2647b45f'
             'b38c042ad4a408c2d30e53590afcc9ee195033204ed22ab86515e219c0fcc456'
             'bcd270d35dee3fb2733a1697ec0f818ae7f1e0a00967cee7c3e37cd0d61103df'
