--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -108,7 +108,7 @@ _stable=${_major}.${_minor}
 _srcname=linux-6.10-rc6
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
-pkgrel=17
+pkgrel=18
 arch=('x86_64' 'x86_64_v3')
 url="https://github.com/nine7nine/Linux-NSPA"
 license=('GPL2')
@@ -154,6 +154,7 @@ source=(
   "1113-mm-lru-misc_optimizations.patch"
   "1116-Support_s2idle-s2ram_on_PREEMPT_RT.patch"
   "1116-kt-pm-suspend_patches.patch"
+  "1119-mm-compaction-Skip_all_non-migratable_pages_during_scan.patch"
   "1120-RFC-Introduce-QPW-for-per-cpu-operations.patch"
   "9999-sched_feat-compile-time.patch"
 )
@@ -547,5 +548,6 @@ sha256sums=('0c62fe9205bd49d396c4dd75a1e203811fc2ff68ad03927d2f7d2d40cf40925e'
             'c6c2b07ba61d624a3e2b351dc5d3d914183bdecb61fa975486f64b046f88a55e'
             '75a79812c1b7c700fba495cb23b7abf8a043a940eaede0560e5b3efc9060704a'
             '6d5a98e630c2981fbab73b895dab34fd727b4113b3c5a6c3a6c00b8ef93a3ae1'
+            'cbcbd40d54e47b97bf44c305b2903f655c7afbf914a0d6c55fcf57ecf1c63713'
             '97a4cd25dcc07cd260d9f410e80d869a376d019affa288fa1b37f15963fe0bd9'
-            'fd2843e5d1e12cb5a4279417b04a5c88af17335affd0998bed858109ce3e2227')
+            'bdbee49b960f40f24e359f231e3d6ebc86fd0c1050d631f355e7618f78faf141')
