--- a/linux-nspa/PKGBUILD
+++ b/linux-nspa/PKGBUILD
@@ -82,7 +82,7 @@ _no_RT_throttle=y
 _sched_feat_comp=y
 
  pkgbase=linux-nspa
-_major=6.14.1
+_major=6.15
 _minor=0
 #_minorc=$((_minor+1))
 #_rcver=rc8
@@ -91,7 +91,7 @@ _stable=${_major}.${_minor}
 #_stable=${_major}
 #_stablerc=${_major}-${_rcver}
 #_srcname=linux-${_stable}
-_srcname=linux-6.14.1
+_srcname=linux-6.15-rc2
 arch=(x86_64 x86_64_v3)
 pkgdesc='Linux-NSPA: PREEMPT_RT_FULL kernel with a twist'
 pkgrel=1
@@ -101,15 +101,14 @@ license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'texlive-latexextra' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'zstd' 'xmlto' 'git' 'gcc' 'gcc-libs' 'glibc' 'binutils' 'make' 'patch')
 source=(
-  "https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.14.1.tar.xz"
-  "0000-patch-6.14-rt3.patch"
+  "https://git.kernel.org/torvalds/t/linux-6.15-rc2.tar.gz"
+  "0000-patch-6.15-rc1-rt1.patch"
   "config"
   "config_surface7"
   "auto-cpu-optimization.sh"
-  "0000-more-uarches-for-kernel-6.8+.patch"
+  "0000-Add_the_CONFIG_X86_NATIVE_CPU_option.patch"
   "0001-ClearLinux-patchwork.patch"
   "0002-sched-fair-Compile-out-NUMA-code-entirely-when-NUMA-.patch"
-  "0003-x86-Enable-fast-strings-on-Intel-if-BIOS-hasn-t-alre.patch"
   "0006-background_reclaim_of_hugepages.patch"
   "0007-Reduce-SCHED_RR-timeslice-100-ms-10-jiffy.patch"
   "0008-mm-increase_max_map_count.patch"
@@ -491,15 +490,14 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha256sums=('5bf122d1879fd64fadf0cecfcd477957ebce1bc5931c14835ee0eda88463e407'
-            '83365aa73ea6fa3ca02bbf900e019e326112b094532c5ea7ae26dece9da02c59'
-            '0e6e7c2792ca989f361dabf5fa774e1a84c88006e595ee3754b9455dd4da5f9d'
-            'beef6232767bc077af04ce6fdf7021b68088e55a154ae36a1280071ef5f914a2'
+sha256sums=('451e6aacc78c843066879cf696ee66f2846b2f6a79bf4570173d1581fae9ba0c'
+            '8149dd3d1e3aeed3d2a21b8e5b1668f262a9c397719d5852468334697e0f4982'
+            '1103c905d79c4d049f06ad9910c2bfa8caf2ad27f9467886f71fb107cf16be1d'
+            '5abdbbe2b5b8007236b7082d0b3bc6cb9f5ca1daf46289d4b7c4bdc5a78db4d0'
             'e1d45b5842079a5f0f53d7ea2d66ffa3f1497766f3ccffcf13ed00f1ac67f95e'
-            '458d5a74cdaf1de427ad18038e310ba328f7be47ce8caed017a5ccda566b79d9'
+            '0e1259ee5e8481a84dd11408421d82ad419e17e2f84b146578ceb83a7427422f'
             'eff62970ee3636da157ad868d63f33b891df5114ce25e12319e7b28bf8fc2a29'
             '5c2a0c96dfa0909f1def1bf9ef0ad9b7e1b90263ca751a2cbd0956d009f0f7cb'
-            'e3c106cfac323c6f677b698b080b48798ea63786a7153f81d9a21f749e73168d'
             '36928ee323a84d8eb75460619b8e2b6493ea6e03f438c0820f73aa79a58cf9b2'
             '05616703ad898f967b7055bdc6dc6c5aab33257005c2ef9d87d55af15c12927b'
             '925b3edafe5aae0e577a5a51f653ef0a93d4299c44e9dcba13882010d4bc58ee'
@@ -509,8 +507,8 @@ sha256sums=('5bf122d1879fd64fadf0cecfcd477957ebce1bc5931c14835ee0eda88463e407'
             '53bc1fc5f0c44072222c67ce5fa53a729643d5269d391b742bab1834bfe4d313'
             '5bddf0faf1194b7c759683290b1af786c79e0dcd79037e95b956772ef3ff5542'
             '59b410a6cbe6a33c91f54139e4a710fbd2dc29e771d60d49b7ec715d3d7e12fe'
-            '015690390c7aaf64ad7794bc458cc191d6b2b0be6e18b62ae65855a57fb46bea'
-            'c0bb9834994db43a6147286d0b94652be69b2d7a67e94be42fd7701227ec38ac'
+            '17ff4ea2bf922badba9a6e2451d930d303ae9f55733900194f4e345c7d178b9a'
+            '3f4165bf93ef02dcf35b704fb5483fd5460156150a831f762f1454911aee16a6'
             'd670d04c03e41f3dbc0ec9c49e50ba2231f610d8d34cb46e341baef3a8002a27'
             '299caa16bc960c3907e9513354e04f1f7683e4cb4972882ec5e92652f42a7070'
             '82427ed401357b5dbc4d095db2abc12d003501da31d49b2acd0c7899def50b2b'
@@ -523,9 +521,9 @@ sha256sums=('5bf122d1879fd64fadf0cecfcd477957ebce1bc5931c14835ee0eda88463e407'
             '8d4570520b9e7259c788e60e8e6d7c58c58bb5c5a99e46f03d13a23515491a18'
             'f3e6c8c98ea5172f424971bc20f128c7f1f6416af6944f58dad1048ba4dff168'
             'a07a110ec5bf4ebcfa1fa04e446ca00145caf72cc3d28d3f5937361f1b4e2e11'
-            '6d5a98e630c2981fbab73b895dab34fd727b4113b3c5a6c3a6c00b8ef93a3ae1'
+            '005cd66bbec398917e56c0f3f06eebaba9d7fc351c12b215e4e1acf13355e56d'
             'cbcbd40d54e47b97bf44c305b2903f655c7afbf914a0d6c55fcf57ecf1c63713'
-            '7e7e8fdec89123a897d8a9cef59753630df06c454afb52fdebf5161fce68443d'
+            '4df510193d760a237c646288305bc6c38b1e3104dfdf44555e9840c7c51bc5d3'
             '3059893c86b3eee288edb6c7d958d84e92c67a7d8e55ad48a9470a2100b0a22e'
             'd02a7971e78702faee8625bdad452468b65db7606bc735c9257ff97d092a6b08'
-            'b5854c58c15a2fdd5bd43234a6199bf96b054198327efa9add378488c4413d25')
+            '5c8e2ec59f1e42f1dcc6d5527fcee741aef9e4832735facb96fc8d7fe2ea08b6')
